--- a/.github/workflows/deploy_for_downtime.yaml
+++ b/.github/workflows/deploy_for_downtime.yaml
@@ -26,7 +26,7 @@ jobs:
     name: Buscando dados
     steps:
       - name: Slavebook validation
-        uses: BrunoNeville31/downtime@main
+        uses: ./
         with:
           selected_daemons: ${{ inputs.selected_daemons }}
         id: slavebook
