--- a/.github/workflows/deploy_for_downtime.yaml
+++ b/.github/workflows/deploy_for_downtime.yaml
@@ -25,8 +25,10 @@ jobs:
     runs-on: ubuntu-latest
     name: Buscando dados
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Slavebook validation
-        uses: ./../../
+        uses: ./
         with:
           selected_daemons: ${{ inputs.selected_daemons }}
         id: slavebook
