--- a/.github/workflows/deploy_for_downtime.yaml
+++ b/.github/workflows/deploy_for_downtime.yaml
@@ -21,9 +21,9 @@ on:
         required: true
         type: string
 jobs:
-  deploy_daemon:
+  first_daemon:
     runs-on: ubuntu-latest
-    name: Buscando dados
+    name: Buscando primeiros Daemons
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -35,6 +35,18 @@ jobs:
 
       - name: first daemons
         run: echo "PRIMEIROS DAEMONS ${{ steps.slavebook.outputs.daemons_first}}"
+
+  second_daemon:
+    runs-on: ubuntu-latest
+    name: Buscando Restante Daemons
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Slavebook validation
+        uses: ./
+        with:
+          selected_daemons: ${{ inputs.selected_daemons }}
+        id: slavebook
       
       - name: second daemons
         run: echo "SEGUNDO DAEMONS ${{ steps.slavebook.outputs.daemons_second}}"
