--- a/ruby/action.yml
+++ b/ruby/action.yml
@@ -11,6 +11,7 @@ outputs:
     description: "Build Daemons"
 
 runs:
+  runs-on: ubuntu-latest
   steps:
     - uses: actions/checkout@v4
     - uses: ruby/setup-ruby@v1
