--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,7 @@ outputs:
     description: "Build Daemons"
 
 runs:
+  using: 'composite'
   steps:
     - uses: actions/checkout@v4
     - uses: ruby/setup-ruby@v1
