--- a/action.yml
+++ b/action.yml
@@ -14,7 +14,9 @@ runs:
   using: 'composite'
   steps:
     - uses: actions/checkout@v4
-    - uses: ruby/setup-ruby@v1
+    - name: Set up Ruby 3.3
+      uses: ruby/setup-ruby@v1
       with:
         ruby-version: '3.3' 
     - run: ruby main.rb
+      shell: bash
