--- a/.github/workflows/deploy_for_downtime.yaml
+++ b/.github/workflows/deploy_for_downtime.yaml
@@ -27,8 +27,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Slavebook validation
-        uses: ./
+        uses: ./ruby
         with:
           selected_daemons: ${{ inputs.selected_daemons }}
           step: "one"
@@ -45,7 +46,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Slavebook validation
-        uses: ./
+        uses: ./ruby
         with:
           selected_daemons: ${{ inputs.selected_daemons }}
           step: "two"
