--- a/ruby/action.yml
+++ b/ruby/action.yml
@@ -18,5 +18,5 @@ runs:
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: '3.3' 
-    - run: ruby main.rb
+    - run: ruby ruby/main.rb
       shell: bash
